# Library-ElrahPy

./: .gitignore  CNAME  README.md  _config.yml  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
char/: mychar.py  mysequence.py
docs/: CNAME  documentation.md  index.md
elrahpy.egg-info/: PKG-INFO
elrahpy/char/: utils.py
elrahpy/integer/: math_primes.py  math_utils.py
elrahpy/types/: landmark.py
harlequelrah_py/: setup.py
harlequelrah_py/harlequelrah_py/date/: clock.py
harlequelrah_py/harlequelrah_py/string/: mycryptography.py  mysequence.py
harlequelrah_py/harlequelrah_py/turtle/: particular_shape.py
harlequelrah_py/harlequelrah_py/types/: landmark.py
integer/: base_converter.py
tests/utils/: test_datekit.py  test_fileskit.py
turtle/: geometric_shape.py
